campos codificados
campos codificados por país, finalizado